--- a/client/template.html
+++ b/client/template.html
@@ -6,6 +6,6 @@
   <title>ssr-render-demo</title>
 </head>
 <body>
-  <div id="root"><app></app></div>
+  <div id="root"><!-- app --></div>
 </body>
 </html>
