--- a/client/template.html
+++ b/client/template.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../favicon.ico"></link>
   <title>ssr-render-demo</title>
 </head>
 <body>
