--- a/client/template.html
+++ b/client/template.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="../favicon.ico"></link>
+  <link rel="shortcut icon" href="favicon.ico"></link>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>ssr-render-demo</title>
 </head>
 <body>
